Fix some styling issues regarding texts overflowing when on small screens.

--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ nav a:hover {
 /* Main content styles */
 main {
     margin: 0 auto;
-    padding-left: 300px;
-    padding-right: 300px;
+    padding-left: 30vh;
+    padding-right: 30vh;
 }
 
 section {
@@ -212,7 +212,7 @@ footer {
 section {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 50px;
 }
 
 #my-hobbies .content-container {
@@ -235,7 +235,7 @@ section {
 
 #terrarium .content-container {
     grid-template-columns: 1fr 3fr;
-    gap: 2vh;
+    gap: 3vh;
 }
 
 /*--------------------------------------------------*/
@@ -272,6 +272,7 @@ section {
 }
 
 #my-projects iframe, #my-projects img {
+    display: flex;
     margin-top: 18px;
     border: #47454b solid 2px;
 }
